# tensorrt_custom_plugin

./: CMakeLists.txt  CaffePluginFactory.h  LeakyReluPlugin.cpp  LeakyReluPlugin.h  PReluPlugin.cpp  PReluPlugin.cu  PReluPlugin.h  README.md  SlicePlugin.cpp
models/: README.md
src/: CaffePluginFactory.cpp  IPluginFactory.h  LeakyReluPlugin.cu  SlicePlugin.h  cvInferenceArcFace.cpp  cvInferenceArcFace.h  cvInferenceBase.cpp  cvInferenceBase.h  define.h  main.cpp
trt_models/: README.md
